# tourbasales

client/: package-lock.json  package.json
client/app/: layout.tsx
server/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
server/app/: alembic.ini  config.py  main.py
server/app/db/: __init__.py  base.py  methods.py  models.py
server/app/migrations/: env.py
server/docker/: .dockerignore  app-entrypoint.sh  app.Dockerfile  postgres.Dockerfile
