[tool.poetry]
name = "tourbasales"
version = "0.0.1"
description = ""
authors = ["hoopengo <hoopengo@yandex.ru>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
pydantic = "^2.4.2"
alembic = "^1.12.0"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
